--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
     image: postgres:12.1
     restart: always
     environment:
-      POSTGRES_USER: "fexservice"
-      POSTGRES_PASSWORD: "password"
-      POSTGRES_DB: "fexservice"
+      - POSTGRES_USER=fexservice
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=fexservice
     volumes:
       - data:/var/lib/postgresql/data
+
